just trying something

--- a/web/index.htm
+++ b/web/index.htm
@@ -1,6 +1,7 @@
 <body>
-This is not the game.  This should be a nice web page
+<h1>Dr Ayvex Light Industries</h1>
 
-<a href="game/game.htm">THIS is the game</a>
+<!-- EXTRA INFO xx88.88.88.88xx  -->
 
 </body>
+
