--- a/web/mc/guide.htm
+++ b/web/mc/guide.htm
@@ -1,3 +1,6 @@
-my ip is bugbug:   50.46.152.238
+direct connect IP address is:   50.46.152.238:25565
 
-1385361052bookmark it!
+1385361284
+bookmark it!
+
+There is also a creative-mode server if you use 25566 instead
