--- a/web/mc/guide.htm
+++ b/web/mc/guide.htm
@@ -1,6 +1,6 @@
-direct connect IP address is:   :25565
+direct connect IP address is:   50.46.152.238:25565
 
-timestamp=1385361340
+timestamp=1385361384
 bookmark it!
 
 There is also a creative-mode server if you use 25566 instead
