--- a/web/mc/guide.htm
+++ b/web/mc/guide.htm
@@ -1,6 +1,6 @@
-direct connect IP address is:   50.46.152.238:25565
+direct connect IP address is:   :25565
 
-timestamp=Fri Nov 29 02:24:01 2013
+timestamp=Sat Nov 30 10:24:01 2013
 bookmark this page!
 
 There is also a creative-mode server if you use 25566 instead
