--- a/web/mc/guide.htm
+++ b/web/mc/guide.htm
@@ -1,6 +1,6 @@
 direct connect IP address is:   50.46.152.238:25565
 
-timestamp=Sat Nov 30 11:11:02 2013
+timestamp=Sat Nov 30 21:00:35 2013 UTC
 bookmark this page!
 
 There is also a creative-mode server if you use 25566 instead
