modified:   demoUtils.js 	modified:   index.html

--- a/web/mc/map/index.html
+++ b/web/mc/map/index.html
@@ -1,10 +1,30 @@
-<head><comments>first get labels on points working</comments></head>
+<head><title>mc2 world map</title></head>
 <body>
-Trying to build a map for the mc2 world<br>
-this is a prototype...we need to move the lib to an "ext" folder, etc<br>
-<div id="toolbar" style="background:pink"> </div>
-<canvas width="800" height="600" id="c" style="border:1px solid #000000; backgroundColor:beige"/>
+<table border=0>
+<tr>
+<td style="width:800px">
+<canvas width="800" height="600" id="c" style="border:2px solid #0000DD; backgroundColor:beige"/>
+</td>
+<td align="top">
+Prototype Map for the <h1>mc2 world</h1><br>
+Copyright 2014<br>
+Ayvex Light Industries<br>
 
+<h2>TODO</h2>
+
+<div style="border:1;backgroundColor:beige;">
+<ul>
+<li>camera motion instead of model motion
+<li>proper UI for same
+<li>colors
+<li>better pathing
+</ul>
+</div>
+<div id="toolbar" style="background:pink;  border:1px solid #000000; padding:10px; spacing:10px; "> </div>
+</td>
+
+</tr>
+</table>
 bye
 
 <script src="pre3d.js"></script>
