--- a/web/mc/map/index.html
+++ b/web/mc/map/index.html
@@ -23,9 +23,6 @@
 </td>
 <td valign="top">
 Map for the <h1>mc2 world</h1><br>
-Copyright 2014<br>
-Ayvex Light Industries<br>
-
 <div id="controlPanel" style="border:2px solid #000000;background-color:lightGray; font-family:Arial;font-size:12">
 <h3><b>Control Panel</b></h3>
 <input type="checkbox" value="animate" id="animate" checked>animate</input>
@@ -51,17 +48,11 @@ camRotZ<input type="text" id="camRotZ" value="x"/><br>
 </div>
 
 
-<h2>TODO LIST</h2>
-
-<div style="border:1;backgroundColor:beige;">
-<ul>
-<li>camera motion instead of model motion
-<li>proper UI for same
-<li>colors
-<li>better pathing
-</ul>
+<div id="toolbar" style="border:1px solid #000000; padding:10px; spacing:10px; "> </div>
+<div border="1" valign="bottom"><br><br>
+<span style="position: absolute; bottom: 0;">Copyright 2014
+<h2>Ayvex Light Industries<h1><br></span>
 </div>
-<div id="toolbar" style="background:pink;  border:1px solid #000000; padding:10px; spacing:10px; "> </div>
 </td>
 
 </tr>
@@ -93,7 +84,7 @@ function makeBigMap(data)
 	var path;
 	var jj=0;  //for the inner loop inside one path
 	var kk=0;  //index into the outputs
-	for(var ii=0, limit=data.length; ii<limit; ++ii)  //bugbug 
+	for(var ii=0, limit=data.length; ii<limit; ++ii)  
 	{
 		pt=data[ii];
 		if (ii==0 || pt[3]!='') //there is text so start a new path
@@ -104,7 +95,7 @@ function makeBigMap(data)
 			}
 			path = new Pre3d.Path();
 			path.starting_point = 0;  //we make this standard
-			path.points = [ ];  //bugbug needed??
+			path.points = [ ];  
 			path.curves = [ ];
 			jj=0;
 		}
@@ -141,7 +132,7 @@ function makeBigMap(data)
 						  xx,-960 ,zz-10);  //minus Z is north
  }
  
- function linePath(x1,y1,z1,x2,y2,z2)  //bugbug use this for the user paths as well??
+ function linePath(x1,y1,z1,x2,y2,z2)  //todo: consider using this for the user paths as well??
  {
 	var path=new Pre3d.Path();
 	path.starting_point=0;
@@ -182,10 +173,7 @@ function makeFakeMap()
 function getMap()  //callback from the cameraAndStuff.js  
 {
 	var data = getMc2Data(); 
-	//debugAdd(data);
-	var theMap = makeBigMap(data);  //bugbug for now
-	//var theMap=makeFakeMap();
-	
+	var theMap = makeBigMap(data);	
 	return theMap;
 }
 
