add support for selection of paths (based on closest-point-to-clicked rule) 	modified:   ../lib/pre3d.js 	modified:   map/cameraAndStuff.js 	modified:   map/demoUtils.js 	modified:   map/index.html

--- a/web/mc/map/index.html
+++ b/web/mc/map/index.html
@@ -218,7 +218,7 @@ $(document).ready(function()
 			{
 				anim.click();
 			}
-			,5*60*1000);//milliseconds  //bugbug settings		
+			,30*1000);//milliseconds  //bugbug settings		
 		DemoUtils.Notify("animate",animate.checked );  //and do it once right now for good measure
 		
 	}
