show the point of the selection.  other selection fixes. 	modified:   ../lib/pre3d.js 	modified:   map/cameraAndStuff.js 	modified:   map/index.html

--- a/web/mc/map/index.html
+++ b/web/mc/map/index.html
@@ -26,6 +26,7 @@ Map for the <h1>mc2 world</h1><br>
 <div id="controlPanel" style="border:2px solid #000000;background-color:lightGray; font-family:Arial;font-size:12">
 <h3><b>Control Panel</b></h3>
 <input type="checkbox" value="animate" id="animate" checked>animate</input>
+<input type="checkbox" value="lockon" id="lockon" >lockon</input>
 </div>
 <div id="readout" style="font-family:Arial;font-size:12;background-color:yellow">
 <table>
