--- a/web/mc/map/index.html
+++ b/web/mc/map/index.html
@@ -13,7 +13,7 @@
 <body>
 
 
-<table border=0>
+<table border="0" height="90%">
 <tr>
 <td style="width:800px" oncontextmenu=";return false"> <!-- disallowing context menu in the map surface only! -->
 <canvas width="800" height="600" id="c" 
@@ -22,7 +22,9 @@
 />
 </td>
 <td valign="top">
-Map for the <h1>mc2 world</h1><br>
+<span style="">Copyright 2014
+<h2>Ayvex Light Industries<h1></span>
+<h1>mc2 world</h1><br>
 <div id="controlPanel" style="border:2px solid #000000;background-color:lightGray; font-family:Arial;font-size:12">
 <h3><b>Control Panel</b></h3>
 <input type="checkbox" value="animate" id="animate" checked>animate</input>
@@ -51,10 +53,11 @@ camRotZ<input type="text" id="camRotZ" value="x"/><br>
 
 <div id="toolbar" style="border:1px solid #000000; padding:10px; spacing:10px; "> </div>
 <div border="1" valign="bottom"><br><br>
-<span style="position: absolute; bottom: 0;">Copyright 2014
+<span style="">Copyright 2014
 <h2>Ayvex Light Industries<h1><br></span>
 </div>
 </td>
+<!--position: absolute; bottom: 0;-->
 
 </tr>
 </table>
