--- a/web/index.htm
+++ b/web/index.htm
@@ -1,7 +1,5 @@
 <body>
-<h1>Dr Ayvex Light Industries</h1>
-
-<!-- EXTRA INFO xx88.88.88.88xx  -->
-
+<h1>Ayvex Light Industries</h1>
+(nothing to see here)
 </body>
 
